--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: feoNotes
-subtitle: Notes and Reflections by feoMike
+title: mapLines
+subtitle: links for mapLines
 
 #build config
 server: true 
